--- a/ckanext/ckanext-sixodp_ui/src/scss/components/footer.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/footer.scss
@@ -1,7 +1,7 @@
 footer {
   &.site-footer {
-    background-color: $black;
-    padding: 20px 0;
+    background-color: $brand-primary;
+    padding: $padding-base-vertical*2 0;
     font-size: 13px;
 
     a,
