--- a/ckanext/ckanext-sixodp_ui/src/scss/components/navbar-offcanvas.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/navbar-offcanvas.scss
@@ -43,7 +43,7 @@
       }
 
       a {
-        padding: 7px 25px 7px 40px;
+        padding: 7px 25px 7px 35px;
         font-size: $font-size*0.9;
 
         &:hover {
@@ -60,7 +60,7 @@
       border-color: $white;
 
       a {
-        padding: 7px 25px 7px 40px;
+        padding: 7px 25px 7px 35px;
         font-size: $font-size-small;
 
         &:focus {
