--- a/ckanext/ckanext-sixodp_ui/src/scss/components/toolbar.scss
+++ b/ckanext/ckanext-sixodp_ui/src/scss/components/toolbar.scss
@@ -1,3 +1,3 @@
 .toolbar {
-  margin-top: 10px;
+  margin: $margin-base-vertical 0;
 }
